# pr-comment

./: .gitignore  Cargo.toml  README.md
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
src/: cli.rs  clipboard.rs  comment.rs  config.rs  main.rs
