[package]
name = "comment"
version = "0.0.1"
authors = ["ink8bit <ink8bit@users.noreply.github.com>"]
edition = "2018"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
dirs = "3.0.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"
clipboard = "0.5.0"
