[package]
name = "comment"
version = "0.0.3"
authors = ["ink8bit <ink8bit@users.noreply.github.com>"]
edition = "2018"

publish = false
readme = "README.md"
repository = "https://github.com/ink8bit/pr-comment/"
license = "MIT"
description = "CLI utility to create a text comment for your pull request"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
dirs = "3.0.1"
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.62"
clipboard = "0.5.0"
